Improve address endpoints
