# swagger.json
@@ -63,6 +63,9 @@
           "200": {
             "description": "OK"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "description": "Not Found"
           }
@@ -415,7 +418,7 @@
         }
       }
     },
-    "/address/addressUser/{id}": {
+    "/address/addressUser/{githubId}": {
       "get": {
         "tags": [
           "Address"
@@ -426,7 +429,7 @@
         ],
         "parameters": [
           {
-            "name": "id",
+            "name": "githubId",
             "in": "path",
             "required": true,
             "type": "string"
@@ -458,7 +461,7 @@
             "schema": {
               "type": "object",
               "properties": {
-                "userId": {
+                "githubId": {
                   "example": "any"
                 },
                 "mainStreet": {
